WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270195
[ MacOS Debug ] fast/text/emoji-num-glyphs.html is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=270195
Summary
[ MacOS Debug ] fast/text/emoji-num-glyphs.html is a constant timeout
Jay Stfleur
Reported
2024-02-27 15:15:48 PST
Description: fast/text/emoji-num-glyphs.html Is a constant timeout on Monterey+ Debug History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Ftext%2Femoji-num-glyphs.html&platform=mac
Diff/Image Diff/Crash Log: No Diff history, link shows 404 error.
https://build.webkit.org/results/Apple-Sonoma-Debug-WK2-Tests/275392@main%20(1025)/fast/text/emoji-num-glyphs-diff.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-27 15:16:59 PST
<
rdar://problem/123720564
>
Jay Stfleur
Comment 2
2024-02-27 15:38:25 PST
Reproducibility: run-webkit-tests --root fast/text/emoji-num-glyphs.html --clobber-old-results --child-processes 10 --iteration 10 -f --exit-after-n-failures 1 Reproduced timeouts at ToT
Alexey Proskuryakov
Comment 3
2024-02-28 13:08:00 PST
This test is fairly fast in release. So could be some pathological debug-only slowness.
Antti Koivisto
Comment 4
2024-06-03 01:23:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29446
EWS
Comment 5
2024-06-03 05:56:04 PDT
Committed
279648@main
(228915f55f2f): <
https://commits.webkit.org/279648@main
> Reviewed commits have been landed. Closing PR #29446 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug