[ MacOS Debug ] fast/text/emoji-num-glyphs.html is a constant timeout https://bugs.webkit.org/show_bug.cgi?id=270195 rdar://problem/123720564

Reviewed by Alan Baradlay.

O(n^2) in whitespace renderer elimination code.

* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateBeforeDescendants):

Also store ::before as a previous renderer.

(WebCore::RenderTreeUpdater::textRendererIsNeeded):

Track whether we have seen an in-flow renderer already.
We can use this to determine if we need to create a whitespace renderer or not.

(WebCore::RenderTreeUpdater::storePreviousRenderer):

Remember in parent stack whether we have a preceding in-flow sibling.

* Source/WebCore/rendering/updating/RenderTreeUpdater.h:

Canonical link: https://commits.webkit.org/279648@main